Fixed tests and removed controller advice